
CHANGELOG

* 2015/01/27:

    - Revised. No outstanding bugs. Working on latest GaGa.

* 2014/09/18:

    - First version.
